# zephyr-squad-api-token-generator

./: README.md  pyproject.toml
src/zephyr_squad_api_token_generator/: __init__.py  main.py
